refactor: Enhance code structure