@@ -1,12 +1,7 @@
 package oocl.travelassistant.controller;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import oocl.travelassistant.dto.BudgetBreakdownDTO;
-import oocl.travelassistant.dto.DailyPlanDTO;
-import oocl.travelassistant.dto.MealsDTO;
-import oocl.travelassistant.dto.TransportationDTO;
-import oocl.travelassistant.dto.TravelPlanDTO;
-import oocl.travelassistant.entity.TravelPlan;
+import oocl.travelassistant.dto.*;
 import oocl.travelassistant.entity.User;
 import oocl.travelassistant.repository.TravelPlanRepository;
 import oocl.travelassistant.repository.UserRepository;
@@ -22,14 +17,16 @@ import org.springframework.test.web.servlet.MockMvc;
 
 import java.math.BigDecimal;
 import java.util.Arrays;
+import java.util.List;
 
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @SpringBootTest
 @ActiveProfiles("test")
 @AutoConfigureMockMvc
-public class TravelPlanControllerTest {
+class TravelPlanControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
@@ -46,18 +43,17 @@ public class TravelPlanControllerTest {
     @Autowired
     private ObjectMapper objectMapper;
 
-    private User testUser;
     private String jwtToken;
 
     @BeforeEach
     void setUp() {
         travelPlanRepository.deleteAll();
         userRepository.deleteAll();
-        
-        testUser = new User();
+
+        User testUser = new User();
         testUser.setUsername("testuser");
         testUser.setPasswordHash(passwordEncoder.encode("password"));
-        testUser = userRepository.save(testUser);
+        userRepository.save(testUser);
 
         jwtToken = loginAndGetToken();
     }
@@ -65,20 +61,20 @@ public class TravelPlanControllerTest {
     private String loginAndGetToken() {
         try {
             String loginBody = """
-                {
-                  "usernameOrEmail": "testuser",
-                  "password": "password"
-                }
-                """;
-            
+                    {
+                      "usernameOrEmail": "testuser",
+                      "password": "password"
+                    }
+                    """;
+
             String response = mockMvc.perform(post("/api/login")
-                    .contentType(MediaType.APPLICATION_JSON)
-                    .content(loginBody))
+                            .contentType(MediaType.APPLICATION_JSON)
+                            .content(loginBody))
                     .andExpect(status().isOk())
                     .andReturn()
                     .getResponse()
                     .getContentAsString();
-                    
+
             return objectMapper.readTree(response).get("token").asText();
         } catch (Exception e) {
             throw new RuntimeException("Failed to get JWT token", e);
@@ -119,22 +115,22 @@ public class TravelPlanControllerTest {
 
         dailyPlan1.setDailyCost(new BigDecimal("800.00"));
 
-        travelPlanDTO.setDailyPlan(Arrays.asList(dailyPlan1));
+        travelPlanDTO.setDailyPlan(List.of(dailyPlan1));
         travelPlanDTO.setTips(Arrays.asList("Bring sunscreen", "Learn basic phrases"));
-        
+
         return travelPlanDTO;
     }
 
     @Test
     void should_create_travel_plan_successfully() throws Exception {
         TravelPlanDTO travelPlanDTO = createTravelPlanDTO();
-        
+
         String body = objectMapper.writeValueAsString(travelPlanDTO);
-        
+
         mockMvc.perform(post("/api/travel-plans")
-                .header("Authorization", "Bearer " + jwtToken)
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(body))
+                        .header("Authorization", "Bearer " + jwtToken)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(body))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.title").value("Test Travel Plan"))
                 .andExpect(jsonPath("$.overview").value("A wonderful trip"))
@@ -146,15 +142,15 @@ public class TravelPlanControllerTest {
     void should_get_user_travel_plans() throws Exception {
         TravelPlanDTO travelPlanDTO = createTravelPlanDTO();
         String body = objectMapper.writeValueAsString(travelPlanDTO);
-        
+
         mockMvc.perform(post("/api/travel-plans")
-                .header("Authorization", "Bearer " + jwtToken)
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(body))
+                        .header("Authorization", "Bearer " + jwtToken)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(body))
                 .andExpect(status().isOk());
 
         mockMvc.perform(get("/api/travel-plans")
-                .header("Authorization", "Bearer " + jwtToken))
+                        .header("Authorization", "Bearer " + jwtToken))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$").isArray())
                 .andExpect(jsonPath("$[0].title").value("Test Travel Plan"));
@@ -164,16 +160,16 @@ public class TravelPlanControllerTest {
     void should_get_travel_plan_by_id() throws Exception {
         TravelPlanDTO travelPlanDTO = createTravelPlanDTO();
         String body = objectMapper.writeValueAsString(travelPlanDTO);
-        
+
         String response = mockMvc.perform(post("/api/travel-plans")
-                .header("Authorization", "Bearer " + jwtToken)
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(body))
+                        .header("Authorization", "Bearer " + jwtToken)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(body))
                 .andExpect(status().isOk())
                 .andReturn()
                 .getResponse()
                 .getContentAsString();
-                
+
         Long travelPlanId = objectMapper.readTree(response).get("id").asLong();
 
         mockMvc.perform(get("/api/travel-plans/" + travelPlanId))
@@ -185,7 +181,7 @@ public class TravelPlanControllerTest {
     @Test
     void should_return_404_when_travel_plan_not_found() throws Exception {
         mockMvc.perform(get("/api/travel-plans/999")
-                .header("Authorization", "Bearer " + jwtToken))
+                        .header("Authorization", "Bearer " + jwtToken))
                 .andExpect(status().isNotFound());
     }
 
@@ -193,20 +189,20 @@ public class TravelPlanControllerTest {
     void should_delete_travel_plan() throws Exception {
         TravelPlanDTO travelPlanDTO = createTravelPlanDTO();
         String body = objectMapper.writeValueAsString(travelPlanDTO);
-        
+
         String response = mockMvc.perform(post("/api/travel-plans")
-                .header("Authorization", "Bearer " + jwtToken)
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(body))
+                        .header("Authorization", "Bearer " + jwtToken)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(body))
                 .andExpect(status().isOk())
                 .andReturn()
                 .getResponse()
                 .getContentAsString();
-                
-        Long travelPlanId = objectMapper.readTree(response).get("id").asLong();
+
+        long travelPlanId = objectMapper.readTree(response).get("id").asLong();
 
         mockMvc.perform(delete("/api/travel-plans/" + travelPlanId)
-                .header("Authorization", "Bearer " + jwtToken))
+                        .header("Authorization", "Bearer " + jwtToken))
                 .andExpect(status().isNoContent());
     }
 }
